--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+п»ї<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -14,8 +14,8 @@
 				Response modelling as a project for Intro2Python
 			</h1>
 			<ol>
-				<li><a href="https://github.com/le-zenith/response-modelling/blob/master/project.ipynb">Ссылка на файл с кодом</a></li>
-				<li><a href="https://github.com/le-zenith/response-modelling/blob/master/dataset.csv">Ссылка на датасет</a></li>
+				<li><a href="https://github.com/le-zenith/response-modelling/blob/master/project.ipynb">РЎСЃС‹Р»РєР° РЅР° С„Р°Р№Р» СЃ РєРѕРґРѕРј</a></li>
+				<li><a href="https://github.com/le-zenith/response-modelling/blob/master/dataset.csv">РЎСЃС‹Р»РєР° РЅР° РґР°С‚Р°СЃРµС‚</a></li>
 			</ol>
 		</div>
 	</section>
