--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 	</head>
 	<body>
+	<meta charset="utf-8">
 	<section class="section">
 		<div class="container content">
 			<h1 class="title">
